--- a/main_styles.css
+++ b/main_styles.css
@@ -52,16 +52,20 @@
 	position: fixed;
 	
 	font-family: monospace;
+	font-size: calc(var(--projectselectorheight) / 2);
 }
 
 .project-selector .main-button {
 	background-color: #D6D6D6;
 	white-space: nowrap;
+	overflow-x: auto;
+	
+	width: inherit;
 	
 	font-family: monospace;
 	height: var(--projectselectorheight);
-	font-size: calc(var(--projectselectorheight) / 2);
 	font-weight: bold;
+	font-size: inherit;
 	padding: 15px;
 	border: none;
 }
@@ -78,6 +82,49 @@
 	
 	:root {
 		--projectselectorheight: 45px;
+		--menuwidth: 80px
+	}
+}
+
+
+/* Media selector for phone */
+@media screen and (max-width: 400px) {
+	.side-main-menu {
+		height: var(--projectselectorheight);
+		width: 100%;
+		padding-top: 0;
+	}
+	
+	.side-main-menu a {
+		font-size: 20px;
+		height: 100%;
+		float: left;
+		padding: 5 5 5 5;
+		
+		display: flex;
+
+	}
+	
+	.project-selector {
+		display: inline-block;
+		width: 100%;
+		
+		margin-top: var(--projectselectorheight);
+		left: 0;
+		
+		font-family: monospace;
+		font-size: 15px
+	}
+	
+	
+	.main-content {
+		margin-left: 0; 
+		margin-top: calc(var(--projectselectorheight) * 2);
+		padding: 10px 10px;
+	}
+	
+	:root {
+		--projectselectorheight: 40px;
 		--menuwidth: 80px
 	}
 }
