--- a/main_styles.css
+++ b/main_styles.css
@@ -72,8 +72,12 @@
 	border: none;
 }
 
-.project-selector .main-button:focus {
+.project-selector .main-button:hover {
 	background-color: #A6A6A6;
+}
+
+.project-selector:hover .selectable-projects {
+	display: block;
 }
 
 
@@ -100,6 +104,10 @@
 		background-color: #A6A6A6;
 }
 
+
+.show-menu {
+	display: block;
+}
 
 
 
