--- a/main_styles.css
+++ b/main_styles.css
@@ -16,6 +16,8 @@
 	background-color: #111; 
 	overflow-x: hidden;
 	padding-top: var(--projectselectorheight);
+	
+	z-index: 1;
 }
 
 
@@ -41,11 +43,15 @@
 	margin-left: var(--menuwidth); 
 	margin-top: var(--projectselectorheight);
 	padding: 10px 10px;
+
+	z-index: 0;
 }
 
 
 .project-selector {
 	display: inline-block;
+	
+	width: 100%;
 	
 	top: 0;
 	left: var(--menuwidth);
@@ -54,6 +60,8 @@
 	font-family: monospace;
 	font-size: calc(var(--projectselectorheight) / 2);
 	font-family: monospace;
+	
+	z-index: 1;
 }
 
 .project-selector .main-button {
@@ -68,7 +76,6 @@
 	height: var(--projectselectorheight);
 	
 	font-size: inherit;
-	padding: 15px;
 	border: none;
 }
 
@@ -91,11 +98,12 @@
 	white-space: nowrap;
 	display: block;
 	
-	padding: 15px;
+	padding: 0;
 	background-color: #E6E6E6;
 	
 	font-size: inherit;
 	font-family: inherit;
+	
 	
 	border: none;
 }
@@ -105,10 +113,42 @@
 }
 
 
-.show-menu {
-	display: block;
+
+.modal {
+	position: fixed;
+	display: none;
+	z-index: 10;
+	
+	left: 0;
+	top: 0;
+	
+	width: 100%;
+	height: 100%;
+	
+	overflow: auto;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+	
 }
 
+
+.modal-content {
+	background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+	height: 80%
+	
+}
+
+
+.modal-close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
 
 
 /* Media selector for tablet */
