Added help page and fetch mechanism to get it using button

--- a/main_styles.css
+++ b/main_styles.css
@@ -132,7 +132,7 @@
 }
 
 
-.modal-content {
+.modal-internal {
 	background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
